<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/checkBoxSelections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selections" />

    <CheckBox
        android:id="@+id/checkBoxBookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bookmarks" />

    <CheckBox
        android:id="@+id/checkBoxLexicon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lexicon" />
    
</LinearLayout>
